tests/errors/undefined_function.vhpt
--TEST--
Undefined function error
--FILE--
<?php
undefined_function();
--EXPECT_ERROR--
undefined function
